WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300089
REGRESSION (Safari 26): Container queries length unit wrong values
https://bugs.webkit.org/show_bug.cgi?id=300089
Summary
REGRESSION (Safari 26): Container queries length unit wrong values
diego
Reported
2025-10-03 03:12:09 PDT
Created
attachment 476948
[details]
The same element is attached to two different parents, with one defining a shadow root with only one <slot> element inside This is almost exactly the same issue reported in
https://bugs.webkit.org/show_bug.cgi?id=260462
, which has been fixed, but now happens when the element containing the container-type property is placed in the light DOM of another element with a shadow ROOT. It is a regression because I couldn't notice this problem in Safari 18.6, which is the version I am using in my desktop, but can be verified in the Safari 26 (I could only test the iOS version, so it needs to be verified in the other versions too). Attached, you can see the reproduction of the issue, that was taken from the one previously linked, with the change to add the element defining the container context to a parent with a shadow root.
Attachments
The same element is attached to two different parents, with one defining a shadow root with only one <slot> element inside
(717 bytes, text/html)
2025-10-03 03:12 PDT
,
diego
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-10-03 08:33:07 PDT
Thank you for the report! Confirmed that this reproduces on macOS.
Radar WebKit Bug Importer
Comment 2
2025-10-03 08:33:47 PDT
<
rdar://problem/161897768
>
Antti Koivisto
Comment 3
2025-10-10 09:30:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52125
EWS
Comment 4
2025-10-10 12:39:58 PDT
Committed
301324@main
(3286a2880158): <
https://commits.webkit.org/301324@main
> Reviewed commits have been landed. Closing PR #52125 and removing active labels.
Antti Koivisto
Comment 5
2025-10-10 21:41:42 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/55368
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug