REGRESSION (Safari 26): Container queries length unit wrong values https://bugs.webkit.org/show_bug.cgi?id=300089 rdar://161897768

Reviewed by Alan Baradlay.

Fix computation of the originating element for pseudo-elements.

* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/container-queries/container-for-shadow-dom-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/container-queries/container-for-shadow-dom.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/container-queries/container-units-shadow-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/container-queries/style-container-for-shadow-dom-expected.txt:
* Source/WebCore/css/CSSSelector.cpp:
(WebCore::CSSSelector::precedingInCompound const):
(WebCore::complexSelectorMatchesElementBackedPseudoElement):

Add a helper.

* Source/WebCore/css/CSSSelector.h:
* Source/WebCore/style/ContainerQueryEvaluator.cpp:
(WebCore::Style::ContainerQueryEvaluator::selectContainer):

Traverse the flat tree ancestors instead of "shadow-including inclusive ancestors".

* Source/WebCore/style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::containerQueriesMatch):

Only use SelectionMode::PseudoElement for pseudo-elements that are not element backed (not ::slotted() or ::part()).

Canonical link: https://commits.webkit.org/301324@main